Fix responsive topnav on mobile

--- a/index.css
+++ b/index.css
@@ -264,7 +264,7 @@
 }
 
 /* Right-aligned section inside the top navigation */
-#topnav-right {
+#topnav {
     float: right;
 }
 
